Fix long task not centered (ie Cubone task)

--- a/static/sass/layout/_pokestop.scss
+++ b/static/sass/layout/_pokestop.scss
@@ -44,6 +44,10 @@
   align-items: center;
   margin-top: 7px;
 
+  &__task {
+    text-align: center;
+  }
+
   &__reward {
     display: flex;
     align-items: center;
